--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,3 @@
-<h1>Compteur de score d'Advanced Civilization</h1>
+<h1>{{ 'landing.title' | transloco }}</h1>
 
-<app-button (click)="onNewGameClicked()">Démarrer une nouvelle partie</app-button>
+<app-button (click)="onNewGameClicked()">{{ 'landing.action' | transloco }}</app-button>
