--- a/frontend/src/app/add-player-page/add-player-page.component.scss
+++ b/frontend/src/app/add-player-page/add-player-page.component.scss
@@ -4,5 +4,15 @@ label, select, input {
 
 label {
   display: block;
-  margin: 1rem 0;
+  margin: 0.5em 0;
+}
+
+.form_input {
+  width: 100%;
+}
+
+input, select {
+  box-sizing: border-box;
+  padding: 0.5em;
+  width: 100%;
 }
