--- a/frontend/src/app/components/button/button.component.scss
+++ b/frontend/src/app/components/button/button.component.scss
@@ -1,9 +1,12 @@
 .button {
-  background-color: black;
+  background-color: #6c5402;
   color: white;
+  border: 1px solid black;
+  box-shadow: 2px 2px 5px 0 #a0a0a0;
   border-radius: 2rem;
-  padding: 1rem;
-  margin: 0 auto;
+  padding: 0.5rem;
+  margin: 0.5em auto;
   text-align: center;
   cursor: pointer;
+  font-size: 1.5em;
 }
