--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,6 @@
 body {
   box-sizing: border-box;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: sans-serif;
   max-width: 900px;
   margin: 0 auto;
   padding: 0.5rem;
