Clicking civ card gives some details about it from the game rules

--- a/frontend/src/app/player-page/player-page.component.scss
+++ b/frontend/src/app/player-page/player-page.component.scss
@@ -18,6 +18,16 @@
   margin: 0;
 }
 
+.civilization_card p {
+  margin: 0.5rem;
+}
+
+.civilization_card .card_requires {
+  margin: 0.5rem;
+  font-weight: bold;
+  font-style: italic;
+}
+
 .action {
   padding: 0.5rem;
   text-align: center;
